k8s-manifests/boutique-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
